--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,13 @@ cython_debug/
 
 **/venv/
 **/venv/**
+
+
+# Ignore all Terraform-related files in all directories
+**/*.tf
+**/*.tf.json
+**/*.tfvars
+**/*.tfstate
+**/*.tfstate.*
+**/.terraform/
+**/.terraform.lock.hcl
