--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,22 @@ cython_debug/
 
 **/venv/
 **/venv/**
+
+# Terraform files
+**/*.tfstate
+**/*.tfstate.*
+**/*.tfvars
+**/*.tfvars.json
+**/.terraform/
+**/.terraform.lock.hcl
+**/crash.log
+**/crash.*.log
+**/override.tf
+**/override.tf.json
+**/*_override.tf
+**/*_override.tf.json
+**/.terraformrc
+**/terraform.rc
+
+# pgAdmin directories
+**/.pgadmin*/
