--- a/feed_management_system/.env.example
+++ b/feed_management_system/.env.example
@@ -1,9 +1,9 @@
 # Database Configuration
-DATABASE_URL=postgresql://username:password@localhost:5432/feed_management
-# For SQLite development: DATABASE_URL=sqlite:///./feed_management.db
+DATABASE_URL=postgresql://username:password@localhost:5432/pipeline_management
+# For SQLite development: DATABASE_URL=sqlite:///./pipeline_management.db
 
 # Application Settings
-APP_NAME=Feed Management System
+APP_NAME=Pipeline Management System
 APP_VERSION=1.0.0
 DEBUG=True
 LOG_LEVEL=INFO
